--- a/udp.html
+++ b/udp.html
@@ -7,63 +7,117 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: white;
-            color: black;
+            background-color: #ffffff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #d9534f;
+        }
+        .description-box {
+            background-color: #f8f9fa;
+            border: 2px solid #333;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #d9534f;
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+            margin-top: 20px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-bottom: 20px;
         }
         th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: center;
+            border: 1px solid #000;
+            padding: 12px;
+            text-align: left;
+            background-color: #ffffff;
         }
         th {
-            background-color: grey;
-            color: white;
+            background-color: #333;
+            color: #ffffff;
+        }
+        tr:nth-child(even) td {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) td {
+            background-color: #ffffff;
         }
         a {
-            color: black;
+            color: #d9534f;
             text-decoration: none;
+            cursor: pointer;
         }
         a:hover {
             text-decoration: underline;
         }
         .description {
             margin-top: 20px;
+            background-color: #f8f9fa;
+            padding: 15px;
+            border: 2px solid #333;
+            border-radius: 5px;
+        }
+        .description a {
+            color: #d9534f;
+            text-decoration: none;
+        }
+        .description a:hover {
+            text-decoration: underline;
         }
     </style>
+    <script>
+        function showDescription(id) {
+            const descriptions = document.querySelectorAll('.description');
+            descriptions.forEach(description => {
+                description.style.display = 'none';
+            });
+            document.getElementById(id).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
 
 <h1>UDP Header Illustration</h1>
+
+<div class="description-box">
+    <p>The User Datagram Protocol (UDP) is a communications protocol that is primarily used to establish low-latency and loss-tolerating connections between applications on the Internet. UDP is used for time-sensitive transmissions such as video playback or DNS lookups. Unlike TCP, UDP is connectionless and does not guarantee reliable delivery, ordering, or error checking.</p>
+</div>
+
+<h2>UDP Header</h2>
 <table>
     <tr>
-        <th colspan="4"><a href="#source-port">Source Port</a> (16 bits)</th>
-        <th colspan="4"><a href="#destination-port">Destination Port</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-srcport')">Source Port</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-dstport')">Destination Port</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="4"><a href="#length">Length</a> (16 bits)</th>
-        <th colspan="4"><a href="#checksum">Checksum</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-length')">Length</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-checksum')">Checksum</a> (16 bits)</th>
     </tr>
 </table>
 
-<div class="description" id="source-port">
+<div class="description" id="desc-srcport">
     <h2>Source Port (16 bits)</h2>
-    <p>Identifies the sending port.</p>
+    <p>Identifies the sending port. <a href="#desc-srcport">Back to header</a></p>
 </div>
-<div class="description" id="destination-port">
+<div class="description" id="desc-dstport">
     <h2>Destination Port (16 bits)</h2>
-    <p>Identifies the receiving port.</p>
+    <p>Identifies the receiving port. <a href="#desc-dstport">Back to header</a></p>
 </div>
-<div class="description" id="length">
+<div class="description" id="desc-length">
     <h2>Length (16 bits)</h2>
-    <p>Specifies the length of the UDP header and data.</p>
+    <p>Specifies the length of the UDP header and data. <a href="#desc-length">Back to header</a></p>
 </div>
-<div class="description" id="checksum">
+<div class="description" id="desc-checksum">
     <h2>Checksum (16 bits)</h2>
-    <p>Used for error-checking the header and data.</p>
+    <p>Used for error-checking the header and data. <a href="#desc-checksum">Back to header</a></p>
 </div>
 
 </body>
