--- a/rarp.html
+++ b/rarp.html
@@ -7,106 +7,150 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: white;
-            color: black;
+            background-color: #ffffff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #d9534f;
+        }
+        .description-box {
+            background-color: #f8f9fa;
+            border: 2px solid #333;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #d9534f;
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+            margin-top: 20px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-bottom: 20px;
         }
         th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: center;
+            border: 1px solid #000;
+            padding: 12px;
+            text-align: left;
+            background-color: #ffffff;
         }
         th {
-            background-color: red;
-            color: white;
+            background-color: #333;
+            color: #ffffff;
+        }
+        tr:nth-child(even) td {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) td {
+            background-color: #ffffff;
         }
         a {
-            color: black;
+            color: #d9534f;
             text-decoration: none;
+            cursor: pointer;
         }
         a:hover {
             text-decoration: underline;
         }
         .description {
             margin-top: 20px;
+            background-color: #f8f9fa;
+            padding: 15px;
+            border: 2px solid #333;
+            border-radius: 5px;
         }
-        .textbox {
-            margin: 20px 0;
-            padding: 10px;
-            border: 1px solid black;
-            background-color: #f9f9f9;
+        .description a {
+            color: #d9534f;
+            text-decoration: none;
+        }
+        .description a:hover {
+            text-decoration: underline;
         }
     </style>
+    <script>
+        function showDescription(id) {
+            const descriptions = document.querySelectorAll('.description');
+            descriptions.forEach(description => {
+                description.style.display = 'none';
+            });
+            document.getElementById(id).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
 
 <h1>RARP Header Illustration</h1>
-<div class="textbox">
-    <p>The Reverse Address Resolution Protocol (RARP) is a network protocol used by a device on a local area network (LAN) to request its IPv4 address from a gateway server's Address Resolution Protocol (ARP) table or cache. This protocol is used primarily by diskless workstations, which do not have the non-volatile storage to permanently store an IP address.</p>
+
+<div class="description-box">
+    <p>The Reverse Address Resolution Protocol (RARP) is a protocol used to map a known MAC address to an IP address. RARP is used by a computer to request its IP address from a gateway server's Address Resolution Protocol (ARP) table or cache. This protocol is now largely obsolete and has been replaced by more modern protocols like BOOTP and DHCP.</p>
 </div>
 
+<h2>RARP Header</h2>
 <table>
     <tr>
-        <th colspan="4"><a href="#hardware-type">Hardware Type</a> (16 bits)</th>
-        <th colspan="4"><a href="#protocol-type">Protocol Type</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-htype')">Hardware Type</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-ptype')">Protocol Type</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="2"><a href="#hardware-length">Hardware Address Length</a> (8 bits)</th>
-        <th colspan="2"><a href="#protocol-length">Protocol Address Length</a> (8 bits)</th>
-        <th colspan="4"><a href="#operation">Operation</a> (16 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-hlen')">Hardware Length</a> (8 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-plen')">Protocol Length</a> (8 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-oper')">Operation</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#sender-hardware-address">Sender Hardware Address</a> (48 bits)</th>
+        <th colspan="48"><a onclick="showDescription('desc-sha')">Sender Hardware Address</a> (48 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#sender-protocol-address">Sender Protocol Address</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-spa')">Sender Protocol Address</a> (32 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#target-hardware-address">Target Hardware Address</a> (48 bits)</th>
+        <th colspan="48"><a onclick="showDescription('desc-tha')">Target Hardware Address</a> (48 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#target-protocol-address">Target Protocol Address</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-tpa')">Target Protocol Address</a> (32 bits)</th>
     </tr>
 </table>
 
-<div class="description" id="hardware-type">
+<div class="description" id="desc-htype">
     <h2>Hardware Type (16 bits)</h2>
-    <p>Specifies the type of hardware (e.g., Ethernet).</p>
+    <p>Specifies the network protocol type. For Ethernet, this is 1. <a href="#desc-htype">Back to header</a></p>
 </div>
-<div class="description" id="protocol-type">
+<div class="description" id="desc-ptype">
     <h2>Protocol Type (16 bits)</h2>
-    <p>Specifies the type of protocol (e.g., IPv4).</p>
+    <p>Specifies the internetwork protocol for which the RARP request is intended. For IPv4, this is 0x0800. <a href="#desc-ptype">Back to header</a></p>
 </div>
-<div class="description" id="hardware-length">
-    <h2>Hardware Address Length (8 bits)</h2>
-    <p>Length of the hardware address (e.g., 6 for Ethernet).</p>
+<div class="description" id="desc-hlen">
+    <h2>Hardware Length (8 bits)</h2>
+    <p>Length in bytes of a hardware address. For Ethernet, this is 6. <a href="#desc-hlen">Back to header</a></p>
 </div>
-<div class="description" id="protocol-length">
-    <h2>Protocol Address Length (8 bits)</h2>
-    <p>Length of the protocol address (e.g., 4 for IPv4).</p>
+<div class="description" id="desc-plen">
+    <h2>Protocol Length (8 bits)</h2>
+    <p>Length in bytes of a protocol address. For IPv4, this is 4. <a href="#desc-plen">Back to header</a></p>
 </div>
-<div class="description" id="operation">
+<div class="description" id="desc-oper">
     <h2>Operation (16 bits)</h2>
-    <p>Specifies the operation (e.g., request or reply).</p>
+    <p>Specifies the operation being performed: 3 for request, 4 for reply. <a href="#desc-oper">Back to header</a></p>
 </div>
-<div class="description" id="sender-hardware-address">
+<div class="description" id="desc-sha">
     <h2>Sender Hardware Address (48 bits)</h2>
-    <p>Hardware address of the sender.</p>
+    <p>The hardware address of the sender. <a href="#desc-sha">Back to header</a></p>
 </div>
-<div class="description" id="sender-protocol-address">
+<div class="description" id="desc-spa">
     <h2>Sender Protocol Address (32 bits)</h2>
-    <p>Protocol address of the sender.</p>
+    <p>The protocol address of the sender. <a href="#desc-spa">Back to header</a></p>
 </div>
-<div class="description" id="target-hardware-address">
+<div class="description" id="desc-tha">
     <h2>Target Hardware Address (48 bits)</h2>
-    <p>Hardware address of the target.</p>
+    <p>The hardware address of the intended receiver. <a href="#desc-tha">Back to header</a></p>
 </div>
-<div class="description" id="target-protocol-address">
+<div class="description" id="desc-tpa">
     <h2>Target Protocol Address (32 bits)</h2>
-    <p>Protocol address of the target.</p>
+    <p>The protocol address of the intended receiver. <a href="#desc-tpa">Back to header</a></p>
 </div>
 
 </body>
