--- a/dns.html
+++ b/dns.html
@@ -7,98 +7,179 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: white;
-            color: black;
+            background-color: #ffffff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #d9534f;
+        }
+        .description-box {
+            background-color: #f8f9fa;
+            border: 2px solid #333;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #d9534f;
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+            margin-top: 20px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-bottom: 20px;
         }
         th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: center;
+            border: 1px solid #000;
+            padding: 12px;
+            text-align: left;
+            background-color: #ffffff;
         }
         th {
-            background-color: grey;
-            color: white;
+            background-color: #333;
+            color: #ffffff;
+        }
+        tr:nth-child(even) td {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) td {
+            background-color: #ffffff;
         }
         a {
-            color: black;
+            color: #d9534f;
             text-decoration: none;
+            cursor: pointer;
         }
         a:hover {
             text-decoration: underline;
         }
         .description {
             margin-top: 20px;
+            background-color: #f8f9fa;
+            padding: 15px;
+            border: 2px solid #333;
+            border-radius: 5px;
         }
-        .textbox {
-            margin: 20px 0;
-            padding: 10px;
-            border: 1px solid black;
-            background-color: #f9f9f9;
+        .description a {
+            color: #d9534f;
+            text-decoration: none;
+        }
+        .description a:hover {
+            text-decoration: underline;
         }
     </style>
+    <script>
+        function showDescription(id) {
+            const descriptions = document.querySelectorAll('.description');
+            descriptions.forEach(description => {
+                description.style.display = 'none';
+            });
+            document.getElementById(id).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
 
 <h1>DNS Header Illustration</h1>
-<div class="textbox">
-    <p>The Domain Name System (DNS) is a hierarchical and decentralized naming system used to translate human-readable domain names (e.g., www.example.com) into machine-readable IP addresses (e.g., 192.0.2.1). DNS is essential for the functionality of the internet, allowing users to access websites using domain names instead of numeric IP addresses. It operates through a network of DNS servers that communicate with each other to resolve domain names to IP addresses.</p>
+
+<div class="description-box">
+    <p>The Domain Name System (DNS) is a hierarchical and decentralized naming system for computers, services, or other resources connected to the Internet or a private network. It translates domain names to IP addresses needed for locating and identifying computer services and devices with the underlying network protocols. DNS resolves queries for these names into IP addresses for the purpose of locating computer services and devices worldwide.</p>
 </div>
 
+<h2>DNS Header</h2>
 <table>
     <tr>
-        <th colspan="8"><a href="#identification">Identification</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-id')">Identification</a> (16 bits)</th>
+        <th colspan="1"><a onclick="showDescription('desc-qr')">QR</a> (1 bit)</th>
+        <th colspan="4"><a onclick="showDescription('desc-opcode')">Opcode</a> (4 bits)</th>
+        <th colspan="1"><a onclick="showDescription('desc-aa')">AA</a> (1 bit)</th>
+        <th colspan="1"><a onclick="showDescription('desc-tc')">TC</a> (1 bit)</th>
+        <th colspan="1"><a onclick="showDescription('desc-rd')">RD</a> (1 bit)</th>
+        <th colspan="1"><a onclick="showDescription('desc-ra')">RA</a> (1 bit)</th>
+        <th colspan="3"><a onclick="showDescription('desc-z')">Z</a> (3 bits)</th>
+        <th colspan="4"><a onclick="showDescription('desc-rcode')">RCode</a> (4 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#flags">Flags</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-qdcount')">QDCount</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-ancount')">ANCount</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="4"><a href="#total-questions">Total Questions</a> (16 bits)</th>
-        <th colspan="4"><a href="#total-answer-rrs">Total Answer RRs</a> (16 bits)</th>
-    </tr>
-    <tr>
-        <th colspan="4"><a href="#total-authority-rrs">Total Authority RRs</a> (16 bits)</th>
-        <th colspan="4"><a href="#total-additional-rrs">Total Additional RRs</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-nscount')">NSCount</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-arcount')">ARCount</a> (16 bits)</th>
     </tr>
 </table>
 
-<div class="description" id="identification">
+<div class="description" id="desc-id">
     <h2>Identification (16 bits)</h2>
-    <p>A unique identifier assigned by the program that generates any kind of DNS query.</p>
+    <p>A 16-bit identifier assigned by the program that generates any kind of query. This identifier is copied in the corresponding response and can be used to match queries and responses. <a href="#desc-id">Back to header</a></p>
 </div>
-<div class="description" id="flags">
-    <h2>Flags (16 bits)</h2>
-    <p>Contains various control flags and status bits:
+<div class="description" id="desc-qr">
+    <h2>QR (1 bit)</h2>
+    <p>A one-bit field that specifies whether this message is a query (0) or a response (1). <a href="#desc-qr">Back to header</a></p>
+</div>
+<div class="description" id="desc-opcode">
+    <h2>Opcode (4 bits)</h2>
+    <p>A four-bit field that specifies the kind of query in this message. This value is set by the originator of a query and copied into the response. The values are:
         <ul>
-            <li><strong>QR (1 bit):</strong> Query/Response Flag (0 for query, 1 for response)</li>
-            <li><strong>Opcode (4 bits):</strong> Specifies the kind of query in the message (standard query, inverse query, or server status request)</li>
-            <li><strong>AA (1 bit):</strong> Authoritative Answer Flag</li>
-            <li><strong>TC (1 bit):</strong> Truncation Flag</li>
-            <li><strong>RD (1 bit):</strong> Recursion Desired</li>
-            <li><strong>RA (1 bit):</strong> Recursion Available</li>
-            <li><strong>Z (3 bits):</strong> Reserved for future use (must be zero)</li>
-            <li><strong>RCode (4 bits):</strong> Response Code (indicating errors or success)</li>
+            <li>0: Standard query (QUERY)</li>
+            <li>1: Inverse query (IQUERY)</li>
+            <li>2: Server status request (STATUS)</li>
         </ul>
-    </p>
+        <a href="#desc-opcode">Back to header</a></p>
 </div>
-<div class="description" id="total-questions">
-    <h2>Total Questions (16 bits)</h2>
-    <p>Number of entries in the question section of the message.</p>
+<div class="description" id="desc-aa">
+    <h2>AA (1 bit)</h2>
+    <p>Authoritative Answer - this bit is valid in responses and specifies that the responding name server is an authority for the domain name in question section. <a href="#desc-aa">Back to header</a></p>
 </div>
-<div class="description" id="total-answer-rrs">
-    <h2>Total Answer RRs (16 bits)</h2>
-    <p>Number of resource records in the answer section.</p>
+<div class="description" id="desc-tc">
+    <h2>TC (1 bit)</h2>
+    <p>TrunCation - specifies that this message was truncated due to length greater than that permitted on the transmission channel. <a href="#desc-tc">Back to header</a></p>
 </div>
-<div class="description" id="total-authority-rrs">
-    <h2>Total Authority RRs (16 bits)</h2>
-    <p>Number of resource records in the authority section.</p>
+<div class="description" id="desc-rd">
+    <h2>RD (1 bit)</h2>
+    <p>Recursion Desired - this bit may be set in a query and is copied into the response. If RD is set, it directs the name server to pursue the query recursively. Recursive query support is optional. <a href="#desc-rd">Back to header</a></p>
 </div>
-<div class="description" id="total-additional-rrs">
-    <h2>Total Additional RRs (16 bits)</h2>
-    <p>Number of resource records in the additional section.</p>
+<div class="description" id="desc-ra">
+    <h2>RA (1 bit)</h2>
+    <p>Recursion Available - this bit is set or cleared in a response and denotes whether recursive query support is available in the name server. <a href="#desc-ra">Back to header</a></p>
+</div>
+<div class="description" id="desc-z">
+    <h2>Z (3 bits)</h2>
+    <p>Reserved for future use. Must be zero in all queries and responses. <a href="#desc-z">Back to header</a></p>
+</div>
+<div class="description" id="desc-rcode">
+    <h2>RCode (4 bits)</h2>
+    <p>Response code - this 4-bit field is set in responses and indicates the status of the response:
+        <ul>
+            <li>0: No error</li>
+            <li>1: Format error</li>
+            <li>2: Server failure</li>
+            <li>3: Name Error</li>
+            <li>4: Not Implemented</li>
+            <li>5: Refused</li>
+        </ul>
+        <a href="#desc-rcode">Back to header</a></p>
+</div>
+<div class="description" id="desc-qdcount">
+    <h2>QDCount (16 bits)</h2>
+    <p>Specifies the number of entries in the question section. <a href="#desc-qdcount">Back to header</a></p>
+</div>
+<div class="description" id="desc-ancount">
+    <h2>ANCount (16 bits)</h2>
+    <p>Specifies the number of resource records in the answer section. <a href="#desc-ancount">Back to header</a></p>
+</div>
+<div class="description" id="desc-nscount">
+    <h2>NSCount (16 bits)</h2>
+    <p>Specifies the number of name server resource records in the authority records section. <a href="#desc-nscount">Back to header</a></p>
+</div>
+<div class="description" id="desc-arcount">
+    <h2>ARCount (16 bits)</h2>
+    <p>Specifies the number of resource records in the additional records section. <a href="#desc-arcount">Back to header</a></p>
 </div>
 
 </body>
