--- a/dhcp.html
+++ b/dhcp.html
@@ -7,146 +7,195 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: white;
-            color: black;
+            background-color: #ffffff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #d9534f;
+        }
+        .description-box {
+            background-color: #f8f9fa;
+            border: 2px solid #333;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #d9534f;
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+            margin-top: 20px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-bottom: 20px;
         }
         th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: center;
+            border: 1px solid #000;
+            padding: 12px;
+            text-align: left;
+            background-color: #ffffff;
         }
         th {
-            background-color: grey;
-            color: white;
+            background-color: #333;
+            color: #ffffff;
+        }
+        tr:nth-child(even) td {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) td {
+            background-color: #ffffff;
         }
         a {
-            color: black;
+            color: #d9534f;
             text-decoration: none;
+            cursor: pointer;
         }
         a:hover {
             text-decoration: underline;
         }
         .description {
             margin-top: 20px;
+            background-color: #f8f9fa;
+            padding: 15px;
+            border: 2px solid #333;
+            border-radius: 5px;
         }
-        .textbox {
-            margin: 20px 0;
-            padding: 10px;
-            border: 1px solid black;
-            background-color: #f9f9f9;
+        .description a {
+            color: #d9534f;
+            text-decoration: none;
+        }
+        .description a:hover {
+            text-decoration: underline;
         }
     </style>
+    <script>
+        function showDescription(id) {
+            const descriptions = document.querySelectorAll('.description');
+            descriptions.forEach(description => {
+                description.style.display = 'none';
+            });
+            document.getElementById(id).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
 
 <h1>DHCP Header Illustration</h1>
-<div class="textbox">
-    <p>The Dynamic Host Configuration Protocol (DHCP) is a network management protocol used to dynamically assign IP addresses and other network configuration parameters to devices on a network, allowing them to communicate with other IP networks. DHCP automates and centrally manages these configurations, reducing the need for network administrators to manually assign IP addresses. This protocol is essential for maintaining efficient network management and simplifying the connection process for devices.</p>
+
+<div class="description-box">
+    <p>The Dynamic Host Configuration Protocol (DHCP) is a network management protocol used on Internet Protocol (IP) networks for automatically assigning IP addresses and other communication parameters to devices connected to the network. DHCP automates and centrally manages these configurations, allowing devices to join the network with no manual configuration.</p>
 </div>
 
+<h2>DHCP Header</h2>
 <table>
     <tr>
-        <th colspan="2"><a href="#op">Operation Code</a> (8 bits)</th>
-        <th colspan="2"><a href="#htype">Hardware Type</a> (8 bits)</th>
-        <th colspan="2"><a href="#hlen">Hardware Address Length</a> (8 bits)</th>
-        <th colspan="2"><a href="#hops">Hops</a> (8 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-op')">Operation Code</a> (8 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-htype')">Hardware Type</a> (8 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-hlen')">Hardware Length</a> (8 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-hops')">Hops</a> (8 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#xid">Transaction Identifier</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-xid')">Transaction ID</a> (32 bits)</th>
     </tr>
     <tr>
-        <th colspan="4"><a href="#secs">Seconds Elapsed</a> (16 bits)</th>
-        <th colspan="4"><a href="#flags">Flags</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-secs')">Seconds</a> (16 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-flags')">Flags</a> (16 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#ciaddr">Client IP Address</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-ciaddr')">Client IP Address</a> (32 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#yiaddr">Your IP Address</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-yiaddr')">Your (Client) IP Address</a> (32 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#siaddr">Server IP Address</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-siaddr')">Next Server IP Address</a> (32 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#giaddr">Gateway IP Address</a> (32 bits)</th>
+        <th colspan="32"><a onclick="showDescription('desc-giaddr')">Relay Agent IP Address</a> (32 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#chaddr">Client Hardware Address</a> (128 bits)</th>
+        <th colspan="48"><a onclick="showDescription('desc-chaddr')">Client Hardware Address</a> (48 bits)</th>
+        <th colspan="16"><a onclick="showDescription('desc-chaddrpad')">Client Hardware Address (Padding)</a> (64 bits)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#sname">Server Host Name</a> (64 bytes)</th>
+        <th colspan="128"><a onclick="showDescription('desc-sname')">Server Name</a> (128 bytes)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#file">Boot File Name</a> (128 bytes)</th>
+        <th colspan="256"><a onclick="showDescription('desc-file')">Boot Filename</a> (128 bytes)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#options">Options</a> (variable)</th>
+        <th colspan="32"><a onclick="showDescription('desc-options')">Options</a> (Variable length)</th>
     </tr>
 </table>
 
-<div class="description" id="op">
+<div class="description" id="desc-op">
     <h2>Operation Code (8 bits)</h2>
-    <p>Specifies the type of message (1 for request, 2 for reply).</p>
+    <p>Indicates the message type: 1 for request, 2 for reply. <a href="#desc-op">Back to header</a></p>
 </div>
-<div class="description" id="htype">
+<div class="description" id="desc-htype">
     <h2>Hardware Type (8 bits)</h2>
-    <p>Specifies the type of hardware used in the network (e.g., Ethernet).</p>
+    <p>Specifies the type of hardware used for the local network. For Ethernet, this is 1. <a href="#desc-htype">Back to header</a></p>
 </div>
-<div class="description" id="hlen">
-    <h2>Hardware Address Length (8 bits)</h2>
-    <p>Length of the hardware address.</p>
+<div class="description" id="desc-hlen">
+    <h2>Hardware Length (8 bits)</h2>
+    <p>Specifies the length of the hardware address. For Ethernet, this is 6. <a href="#desc-hlen">Back to header</a></p>
 </div>
-<div class="description" id="hops">
+<div class="description" id="desc-hops">
     <h2>Hops (8 bits)</h2>
-    <p>Used by relay agents to control the forwarding of messages.</p>
+    <p>Set to 0 by a client before transmitting a request and used by relay agents to control the forwarding of messages. <a href="#desc-hops">Back to header</a></p>
 </div>
-<div class="description" id="xid">
-    <h2>Transaction Identifier (32 bits)</h2>
-    <p>A random number chosen by the client to identify an exchange of messages between the client and server.</p>
+<div class="description" id="desc-xid">
+    <h2>Transaction ID (32 bits)</h2>
+    <p>A randomly chosen number used by the client and server to associate messages and responses between a client and a server. <a href="#desc-xid">Back to header</a></p>
 </div>
-<div class="description" id="secs">
-    <h2>Seconds Elapsed (16 bits)</h2>
-    <p>The number of seconds elapsed since the client began the address acquisition or renewal process.</p>
+<div class="description" id="desc-secs">
+    <h2>Seconds (16 bits)</h2>
+    <p>Elapsed time in seconds since the client began the address acquisition or renewal process. <a href="#desc-secs">Back to header</a></p>
 </div>
-<div class="description" id="flags">
+<div class="description" id="desc-flags">
     <h2>Flags (16 bits)</h2>
-    <p>Flags (e.g., broadcast flag).</p>
+    <p>Used to control the interpretation of the "broadcast" bit in the DHCP message. <a href="#desc-flags">Back to header</a></p>
 </div>
-<div class="description" id="ciaddr">
+<div class="description" id="desc-ciaddr">
     <h2>Client IP Address (32 bits)</h2>
-    <p>The client’s IP address, if it has one.</p>
+    <p>The client’s IP address, if it has one, otherwise 0. <a href="#desc-ciaddr">Back to header</a></p>
 </div>
-<div class="description" id="yiaddr">
-    <h2>Your IP Address (32 bits)</h2>
-    <p>The IP address that the server is assigning to the client.</p>
+<div class="description" id="desc-yiaddr">
+    <h2>Your (Client) IP Address (32 bits)</h2>
+    <p>The IP address that the server is assigning to the client. <a href="#desc-yiaddr">Back to header</a></p>
 </div>
-<div class="description" id="siaddr">
-    <h2>Server IP Address (32 bits)</h2>
-    <p>The IP address of the next server to use in the bootstrap process.</p>
+<div class="description" id="desc-siaddr">
+    <h2>Next Server IP Address (32 bits)</h2>
+    <p>The IP address of the next server to use in the bootstrap process. <a href="#desc-siaddr">Back to header</a></p>
 </div>
-<div class="description" id="giaddr">
-    <h2>Gateway IP Address (32 bits)</h2>
-    <p>The IP address of the relay agent.</p>
+<div class="description" id="desc-giaddr">
+    <h2>Relay Agent IP Address (32 bits)</h2>
+    <p>The IP address of the relay agent, if any, used by the client. <a href="#desc-giaddr">Back to header</a></p>
 </div>
-<div class="description" id="chaddr">
-    <h2>Client Hardware Address (128 bits)</h2>
-    <p>The hardware address of the client.</p>
+<div class="description" id="desc-chaddr">
+    <h2>Client Hardware Address (48 bits)</h2>
+    <p>The hardware address of the client. <a href="#desc-chaddr">Back to header</a></p>
 </div>
-<div class="description" id="sname">
-    <h2>Server Host Name (64 bytes)</h2>
-    <p>Optional server host name.</p>
+<div class="description" id="desc-chaddrpad">
+    <h2>Client Hardware Address (Padding) (64 bits)</h2>
+    <p>Padding for the client hardware address to ensure alignment. <a href="#desc-chaddrpad">Back to header</a></p>
 </div>
-<div class="description" id="file">
-    <h2>Boot File Name (128 bytes)</h2>
-    <p>Boot file name string, null-terminated.</p>
+<div class="description" id="desc-sname">
+    <h2>Server Name (128 bytes)</h2>
+    <p>An optional server host name, null-terminated string. <a href="#desc-sname">Back to header</a></p>
 </div>
-<div class="description" id="options">
-    <h2>Options (variable)</h2>
-    <p>Optional parameters field.</p>
+<div class="description" id="desc-file">
+    <h2>Boot Filename (128 bytes)</h2>
+    <p>An optional null-terminated string, used by the client to request a particular boot file. <a href="#desc-file">Back to header</a></p>
+</div>
+<div class="description" id="desc-options">
+    <h2>Options (Variable length)</h2>
+    <p>Optional parameters field containing options and padding. <a href="#desc-options">Back to header</a></p>
 </div>
 
 </body>
