--- a/http.html
+++ b/http.html
@@ -7,91 +7,142 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: white;
-            color: black;
+            background-color: #ffffff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #d9534f;
+        }
+        .description-box {
+            background-color: #f8f9fa;
+            border: 2px solid #333;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #d9534f;
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+            margin-top: 20px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-bottom: 20px;
         }
         th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: center;
+            border: 1px solid #000;
+            padding: 12px;
+            text-align: left;
+            background-color: #ffffff;
         }
         th {
-            background-color: grey;
-            color: white;
+            background-color: #333;
+            color: #ffffff;
+        }
+        tr:nth-child(even) td {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) td {
+            background-color: #ffffff;
         }
         a {
-            color: black;
+            color: #d9534f;
             text-decoration: none;
+            cursor: pointer;
         }
         a:hover {
             text-decoration: underline;
         }
         .description {
             margin-top: 20px;
+            background-color: #f8f9fa;
+            padding: 15px;
+            border: 2px solid #333;
+            border-radius: 5px;
         }
-        .textbox {
-            margin: 20px 0;
-            padding: 10px;
-            border: 1px solid black;
-            background-color: #f9f9f9;
+        .description a {
+            color: #d9534f;
+            text-decoration: none;
+        }
+        .description a:hover {
+            text-decoration: underline;
         }
     </style>
+    <script>
+        function showDescription(id) {
+            const descriptions = document.querySelectorAll('.description');
+            descriptions.forEach(description => {
+                description.style.display = 'none';
+            });
+            document.getElementById(id).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
 
 <h1>HTTP Header Illustration</h1>
-<div class="textbox">
-    <p>The HyperText Transfer Protocol (HTTP) is an application protocol used for transmitting hypermedia documents, such as HTML. It is the foundation of any data exchange on the Web and it is a protocol used for communication between web browsers and servers. HTTP follows a client-server model where the web browser, also known as the client, sends a request to the web server, which then sends back the requested information in the form of a response.</p>
+
+<div class="description-box">
+    <p>The Hypertext Transfer Protocol (HTTP) is an application protocol used for transmitting hypermedia documents, such as HTML. It is the foundation of any data exchange on the Web and it is a protocol used for distributed, collaborative, hypermedia information systems. HTTP follows a classical client-server model, with a client opening a connection and sending a request message to a server which then returns a response message.</p>
 </div>
 
+<h2>HTTP Header Fields</h2>
 <table>
     <tr>
-        <th colspan="8"><a href="#request-line">Request Line</a></th>
+        <th colspan="32"><a onclick="showDescription('desc-method')">Request Method</a> (Variable length)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#status-line">Status Line</a></th>
+        <th colspan="32"><a onclick="showDescription('desc-uri')">Request URI</a> (Variable length)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#general-headers">General Headers</a></th>
+        <th colspan="32"><a onclick="showDescription('desc-version')">HTTP Version</a> (Variable length)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#request-headers">Request Headers</a></th>
+        <th colspan="32"><a onclick="showDescription('desc-statuscode')">Status Code</a> (Variable length)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#response-headers">Response Headers</a></th>
+        <th colspan="32"><a onclick="showDescription('desc-reasonphrase')">Reason Phrase</a> (Variable length)</th>
     </tr>
     <tr>
-        <th colspan="8"><a href="#entity-headers">Entity Headers</a></th>
+        <th colspan="32"><a onclick="showDescription('desc-headers')">Headers</a> (Variable length)</th>
+    </tr>
+    <tr>
+        <th colspan="32"><a onclick="showDescription('desc-messagebody')">Message Body</a> (Variable length)</th>
     </tr>
 </table>
 
-<div class="description" id="request-line">
-    <h2>Request Line</h2>
-    <p>Contains the method (e.g., GET, POST), the requested resource, and the HTTP version (e.g., HTTP/1.1).</p>
+<div class="description" id="desc-method">
+    <h2>Request Method (Variable length)</h2>
+    <p>Specifies the method to be performed on the resource identified by the Request-URI. Common methods include GET, POST, PUT, DELETE, etc. <a href="#desc-method">Back to header</a></p>
 </div>
-<div class="description" id="status-line">
-    <h2>Status Line</h2>
-    <p>Contains the HTTP version, status code, and status message (e.g., HTTP/1.1 200 OK).</p>
+<div class="description" id="desc-uri">
+    <h2>Request URI (Variable length)</h2>
+    <p>The URI of the resource upon which to apply the request. <a href="#desc-uri">Back to header</a></p>
 </div>
-<div class="description" id="general-headers">
-    <h2>General Headers</h2>
-    <p>Includes fields like Date, Connection, and Cache-Control.</p>
+<div class="description" id="desc-version">
+    <h2>HTTP Version (Variable length)</h2>
+    <p>Specifies the version of the HTTP protocol being used. For example, HTTP/1.1. <a href="#desc-version">Back to header</a></p>
 </div>
-<div class="description" id="request-headers">
-    <h2>Request Headers</h2>
-    <p>Includes fields like Host, User-Agent, Accept, and Authorization.</p>
+<div class="description" id="desc-statuscode">
+    <h2>Status Code (Variable length)</h2>
+    <p>Indicates the outcome of the request. For example, 200 OK, 404 Not Found, etc. <a href="#desc-statuscode">Back to header</a></p>
 </div>
-<div class="description" id="response-headers">
-    <h2>Response Headers</h2>
-    <p>Includes fields like Server, WWW-Authenticate, and Set-Cookie.</p>
+<div class="description" id="desc-reasonphrase">
+    <h2>Reason Phrase (Variable length)</h2>
+    <p>A textual description of the status code. For example, "OK" for status code 200. <a href="#desc-reasonphrase">Back to header</a></p>
 </div>
-<div class="description" id="entity-headers">
-    <h2>Entity Headers</h2>
-    <p>Includes fields like Content-Type, Content-Length, and Content-Encoding.</p>
+<div class="description" id="desc-headers">
+    <h2>Headers (Variable length)</h2>
+    <p>Consists of one or more header fields, each containing a name followed by a colon and the field value. For example, Content-Type: text/html. <a href="#desc-headers">Back to header</a></p>
+</div>
+<div class="description" id="desc-messagebody">
+    <h2>Message Body (Variable length)</h2>
+    <p>The actual data being sent, such as the content of a web page in an HTTP response. <a href="#desc-messagebody">Back to header</a></p>
 </div>
 
 </body>
